# pam

./: configure.in
conf/pam_conv1/: pam_conv_l.c
debian/: changelog  control  libpam-chksshpwd.install  libpam-chksshpwd.manpages  libpam-chksshpwd.postinst  libpam-chksshpwd.prerm  rules
doc/specs/: parse_l.c
etc/profile.d/: sshpwd.sh
modules/: Makefile.am
modules/pam_chksshpwd/: Makefile.am  README  README.xml  pam_chksshpwd.8  pam_chksshpwd.8.xml  pam_chksshpwd.c
po/: Linux-PAM.pot  POTFILES.in  en_GB.po
